@@ -1,4 +1,5 @@
 v4.0.4
+- ADDED: Retroactive world generation
 - CHANGE: Alloy smelter removed
 - CHANGE: Only gates with torches emit light
 - FIX: Toggle latch torches being off on placement
